# InheritX

.github/workflows/: frontend.yml
backend/: .env.example  Cargo.toml  README.md
backend/src/: analytics.rs  api.rs  api_versioning.rs  app.rs  auth.rs  compliance.rs  config.rs  data_retention.rs  db.rs  event_handlers.rs  governance.rs  lib.rs  main.rs  middleware.rs  reputation.rs  safe_math.rs  validation.rs
backend/src/gradual_health_decline/: errors.rs  gradual_health_decline_service.rs  inheritance_stage_manager.rs  medical_integrator.rs  types.rs
backend/tests/: admin-reject-kyc.rs  admin_audit_log.rs  admin_due_plans_tests.rs  admin_metrics_tests.rs  api_tests.rs  auth_tests.rs  cancel_plan_tests.rs  claim_metrics_tests.rs  claim_tests.rs  compliance_integration_tests.rs  concurrent_claim_tests.rs  create_plan_atomic_safety.rs  double_claim.rs  fee_calculation_tests.rs  health_tests.rs  invalid_signature_tests.rs  kyc_submit_tests.rs  kyc_tests.rs  lifecycle.rs  loan_lifecycle_tests.rs  login_failure_tests.rs  notification_atomic_safety.rs  notification_tests.rs  ownership_protection_tests.rs  pagination_tests.rs  plan_statistics_tests.rs  plan_tests.rs  rate_limit_tests.rs  replay_attack_tests.rs  revenue_metrics_tests.rs  security_tests.rs  token_transfer_failure.rs  two_fa_tests.rs  user_due_plans_tests.rs  user_growth_metrics_tests.rs  wallet_balance_tests.rs  yield_reporting_tests.rs
contracts/borrowing-contract/src/: lib.rs
contracts/genetic-verification/src/: lib.rs  test.rs
contracts/inheritance-contract/src/: lib.rs  test.rs
(+27 files in other folders)
